Created split view for inspector

--- a/css/style.css
+++ b/css/style.css
@@ -3,13 +3,26 @@ body {
 }
 
 #wrapper {
+    display: flex;
+    align-content: stretch;
+    align-items: stretch;
+    flex-direction: row;
     width: 100vw;
     height: 100vh;
     overflow: hidden;
     background-color: black;
 }
 
-#wrapper #renderer {
-    width: 100vw;
-    height: 100vh;
+#wrapper #viewport {
+    flex-grow: 1;
+}
+
+#wrapper #viewport #renderer {
+    position: absolute;
+}
+
+#wrapper #inspector {
+    flex-grow: 0;
+    width: 300px;
+    background-color: white;
 }
